# OpenGL_VSC_version_3.3

./: .gitignore  CMakeLists.txt  main.cpp
Includes/Buffers/: BufferClass.h  EBO.cpp  EBO.h  Geometry.cpp  Geometry.h  Mesh.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
Includes/Camera/: CameraClass.cpp  CameraClass.h
Includes/ECS/: GameObject.h  Model.h  scene.h
Includes/ECS/Components/: CameraClass.h  CameraFlightControl.h  Component.h  DirectionalLight.h  Material.h  MeshLoader.h  Model.h  PointLight.h  SpotLight.h  Transform.h
Includes/ECS/Systems/: PreRenderer.h  Prerenderer  RenderQueue.h  Renderer.h  RenderingSystem.h
Includes/Shaders/: Shader.h  ShaderClass.cpp  ShaderClass.h
Includes/Textures/: TextureClass.cpp  TextureClass.h
Includes/assimp/: revision.h
Includes/core/: Application.h  Initialicer.h  ResourceManager.h  SceneManager.h  Window.h  scene.h
Includes/renderer/: MaterialData.h  Materials.h  PreRenderer.h  ShaderClass.h  ShaderUpLoader.h  Sorter.h  TextureClass.h  VBO.h
Includes/renderer/Buffers/: EBO.h
Includes/scene/: CameraClass.h  GameObject.h  Mesh.h  Model.h  ResourceManager.h  SceneManager.h
Includes/utils/: Component.h  Components.h  Debugger.h  Input.h  Model.h  Singleton.h  Time.h  Transform.h
Lib/: assimp-vc143-mtd.lib  glad.c  glfw3.lib
Shaders/: Fragment.fs  LightCubeFragment.fs  LightCubeVertex.vs  Vertex.vs
assets/Shaders/: BaseLit.fs  Fragment.fs  LightCubeFragment.fs  LightCubeVertex.vs  SimpleShader.fs  SimpleShader.vs  Vertex.vs
src/: CameraClass.cpp  EBO.cpp  Geometry.cpp  Mesh.cpp  ShaderClass.cpp  TextureClass.cpp  VAO.cpp  VBO.cpp  main.cpp
src/ECS/: GameObject.cpp  Model.cpp  scene.cpp
src/ECS/Components/: CameraClass.cpp  CameraFlightControl.cpp  DirectionalLight.cpp  Material.cpp  MeshLoader.cpp  Model.cpp  Transform.cpp
src/ECS/Systems/: PreRenderer.cpp  RenderQueue  RenderQueue.cpp  Renderer.cpp  RenderingSystem.cpp
src/core/: Application.cpp  ResourceManager.cpp  SceneManager.cpp  Window.cpp  scene.cpp
src/renderer/: EBO.cpp  Geometry.cpp  PreRenderer.cpp  ShaderClass.cpp  ShaderUpLoader.cpp  Sorter.cpp  TextureClass.cpp  VAO.cpp  VBO.cpp  image.cpp
src/scene/: CameraClass.cpp  GameObject  GameObject.cpp  Mesh.cpp  Model.cpp  ResourceManager.cpp  sceneManager.cpp
src/utils/: Input.cpp  Time.cpp  Transform.cpp
